# RLIF

./: .gitignore  README.md  evaluate.py  pyproject.toml  train_expert.py  train_rlif.py
configs/: adroit_pen.yaml  hopper.yaml  walker2d.yaml
rlif/: __init__.py
rlif/agents/: __init__.py  oracle.py
rlif/algorithms/: __init__.py  expert.py  rlif.py  rlpd.py
rlif/data/: dataset.py  loaders.py  replay_buffer.py
rlif/envs/: make_env.py
rlif/models/: actor.py  critic.py  mlp.py
rlif/utils/: __init__.py  checkpoint.py  config.py  logging.py  normalization.py  seed.py
scripts/: README.md  export_minari_to_npz.py
