[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlif"
version = "0.1.0"
description = "RLIF on top of RLPD for simulation-only MuJoCo research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "gymnasium[mujoco]>=0.29",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "wandb>=0.17",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "mypy>=1.10"]
offline = ["minari>=0.5.3"]

[project.scripts]
train-expert = "train_expert:main"
train-rlif = "train_rlif:main"
evaluate-rlif = "evaluate:main"

[tool.setuptools]
packages = { find = { include = ["rlif*"] } }

